[package]
name = "rubble_tea"
version = "4.1.0"
edition = "2021"
license="GPL-3.0-or-later"
authors = ["RHL120 <rhl120@protonmail.com>"]
description = "A tui library that follows the MVC pattern"
readme = "README.md"
repository = "https://github.com/RHL120/rubble_tea"
keywords = ["tui", "mvc", "nim", "bubbletea", "rubbletea"]
categories = ["command-line-interface"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "2.0.1"
